--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <!-- Palette below -->
       <!-- https://coolors.co/visualizer/2d2d3b-5c757f-fe5f55-e8f0ff-f8e9e9 -->
       <div
-        class="flex flex-col items-center w-56 h-screen p-4 transition duration-300 bg-vdark-600 dark:bg-zinc-900"
+        class="flex h-screen w-56 flex-col items-center bg-vdark-600 p-4 transition duration-300 dark:bg-zinc-900"
         x-ref="mainSidebar"
       >
         <!-- MARK: CLIENTS -->
         <button
           :class="{ '!text-vred-400 !underline dark:!underline !decoration-1 dark:!decoration-2 !decoration-vred-400 dark:!decoration-vred-300 dark:!text-neutral-50': tabContentActive('clients') }"
           @click="tabButtonClicked('clients')"
-          class="flex flex-row p-2 my-4 text-lg font-bold text-white transition duration-300 hover:text-vred-300 active:scale-95 dark:text-neutral-400 dark:hover:text-neutral-50"
+          class="my-4 flex flex-row p-2 text-lg font-bold text-white transition duration-300 hover:text-vred-300 active:scale-95 dark:text-neutral-400 dark:hover:text-neutral-50"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -32,7 +32,7 @@
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
-            class="mr-2 feather feather-users"
+            class="feather feather-users mr-2"
           >
             <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
             <circle cx="9" cy="7" r="4"></circle>
@@ -45,7 +45,7 @@
         <button
           @click="tabButtonClicked('styles')"
           :class="{ '!text-vred-400 !underline dark:!underline !decoration-1 dark:!decoration-2 !decoration-vred-400 dark:!decoration-vred-300 dark:!text-neutral-50': tabContentActive('styles') }"
-          class="flex flex-row p-2 my-4 text-lg font-bold text-white transition duration-300 hover:text-vred-300 active:scale-95 dark:text-neutral-400 dark:hover:text-neutral-50"
+          class="my-4 flex flex-row p-2 text-lg font-bold text-white transition duration-300 hover:text-vred-300 active:scale-95 dark:text-neutral-400 dark:hover:text-neutral-50"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -57,21 +57,22 @@
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
-            class="mr-2 feather feather-scissors"
+            class="feather feather-package mr-2"
           >
-            <circle cx="6" cy="6" r="3"></circle>
-            <circle cx="6" cy="18" r="3"></circle>
-            <line x1="20" y1="4" x2="8.12" y2="15.88"></line>
-            <line x1="14.47" y1="14.48" x2="20" y2="20"></line>
-            <line x1="8.12" y1="8.12" x2="12" y2="12"></line>
+            <line x1="16.5" y1="9.4" x2="7.5" y2="4.21"></line>
+            <path
+              d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"
+            ></path>
+            <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
+            <line x1="12" y1="22.08" x2="12" y2="12"></line>
           </svg>
-          Styles
+          Items
         </button>
         <!-- MARK: INVOICES -->
         <button
           @click="tabButtonClicked('invoices')"
           :class="{ '!text-vred-400 !underline dark:!underline !decoration-1 dark:!decoration-2 !decoration-vred-400 dark:!decoration-vred-300 dark:!text-neutral-50': tabContentActive('invoices') }"
-          class="flex flex-row p-2 my-4 text-lg font-bold text-white transition duration-300 hover:text-vred-300 active:scale-95 dark:text-neutral-400 dark:hover:text-neutral-50"
+          class="my-4 flex flex-row p-2 text-lg font-bold text-white transition duration-300 hover:text-vred-300 active:scale-95 dark:text-neutral-400 dark:hover:text-neutral-50"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -83,7 +84,7 @@
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
-            class="mr-2 feather feather-file-text"
+            class="feather feather-file-text mr-2"
           >
             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
             <polyline points="14 2 14 8 20 8"></polyline>
@@ -97,14 +98,14 @@
         <button
           @click="tabButtonClicked('editor')"
           :class="{ '!text-vred-400 !underline dark:!underline !decoration-1 dark:!decoration-2 !decoration-vred-400 dark:!decoration-vred-300 dark:!text-neutral-50': tabContentActive('editor') }"
-          class="flex flex-row p-2 my-4 text-lg font-bold text-white transition duration-300 hover:text-vred-300 active:scale-95 dark:text-neutral-400 dark:hover:text-neutral-50"
+          class="my-4 flex flex-row p-2 text-lg font-bold text-white transition duration-300 hover:text-vred-300 active:scale-95 dark:text-neutral-400 dark:hover:text-neutral-50"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
             height="30"
             fill="currentColor"
-            class="flex mr-2 align-middle bi bi-wrench"
+            class="bi bi-wrench mr-2 flex align-middle"
             viewBox="0 -1 20 20"
           >
             <path
@@ -114,7 +115,7 @@
           Editor
         </button>
         <!-- MARK: THEME CHANGE -->
-        <div class="absolute bottom-0 p-2 mb-8">
+        <div class="absolute bottom-0 mb-8 p-2">
           <template x-if="mode === 'light'">
             <button @click="toggleTheme()" x-show="mode==='light'" class="items-center">
               <svg
@@ -127,7 +128,7 @@
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                class="text-white transition duration-300 feather feather-sun hover:text-vred-300 active:scale-90"
+                class="feather feather-sun text-white transition duration-300 hover:text-vred-300 active:scale-90"
               >
                 <circle cx="12" cy="12" r="5"></circle>
                 <line x1="12" y1="1" x2="12" y2="3"></line>
@@ -154,7 +155,7 @@
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                class="text-white transition duration-300 feather feather-moon hover:text-vred-300 active:scale-90"
+                class="feather feather-moon text-white transition duration-300 hover:text-vred-300 active:scale-90"
               >
                 <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
               </svg>
@@ -163,22 +164,20 @@
         </div>
       </div>
       <!-- Content Container with Transitions -->
-      <div class="flex flex-col w-full p-5 overflow-auto bg-vpalered-300 will-change-auto dark:bg-zinc-800">
-        <template x-if="true">
-          <div
-            x-ref="tabContentContainer"
-            x-show="!isLoading"
-            x-transition:enter="transition ease-in duration-200 transform"
-            x-transition:enter-start="opacity-0 translate-y-40"
-            x-transition:enter-end="opacity-100 translate-y-0"
-            x-transition:leave="transition ease-out duration-100 transform"
-            x-transition:leave-start="opacity-100 translate-y-0"
-            x-transition:leave-end="opacity-0 translate-y-20"
-            class="w-full"
-          >
-            <div x-html="tabContent"></div>
-          </div>
-        </template>
+      <div class="flex w-full flex-col overflow-auto bg-vpalered-300 p-5 will-change-auto dark:bg-zinc-800">
+        <div
+          x-ref="tabContentContainer"
+          x-show="!isLoading"
+          x-transition:enter="transition ease-in duration-200 transform"
+          x-transition:enter-start="opacity-0 translate-y-40"
+          x-transition:enter-end="opacity-100 translate-y-0"
+          x-transition:leave="transition ease-out duration-100 transform"
+          x-transition:leave-start="opacity-100 translate-y-0"
+          x-transition:leave-end="opacity-0 translate-y-20"
+          class="w-full"
+        >
+          <div x-html="tabContent"></div>
+        </div>
       </div>
       <!-- MARK: TOASTS -->
       <template x-teleport="body">
@@ -526,7 +525,7 @@
                             "
               @mouseover="toastHovered=true"
               @mouseout="toastHovered=false"
-              class="absolute w-full duration-300 ease-out select-none sm:max-w-xs"
+              class="absolute w-full select-none duration-300 ease-out sm:max-w-xs"
               :class="{ 'toast-no-description': !toast.description }"
             >
               <span
@@ -616,7 +615,7 @@
                   class="absolute right-0 mr-2.5 cursor-pointer rounded-full p-1.5 text-gray-400 opacity-0 duration-100 ease-in-out hover:bg-gray-50 hover:text-gray-500"
                   :class="{ 'top-1/2 -translate-y-1/2' : !toast.description && !toast.html, 'top-0 mt-2.5' : (toast.description || toast.html), 'opacity-100' : toastHovered, 'opacity-0' : !toastHovered }"
                 >
-                  <svg class="w-3 h-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="h-3 w-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path
                       fill-rule="evenodd"
                       d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
@@ -632,6 +631,7 @@
     </div>
     <script src="./public/componentsLibrary/vik-tooltip.js" defer></script>
     <script type="module" src="./app.js" defer></script>
+    <script src="./alpinejs/plugins/collapse.js" defer></script>
     <script src="./alpinejs/dist/cdn.min.js" defer></script>
   </body>
 </html>
